test database seed, hierarchical comments, updated the logic for deletion of posts and comments for posterity
